--- a/.editorconfig
+++ b/.editorconfig
@@ -11,10 +11,10 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 max_line_length = 80
 
-[*.{html,js}]
+[*.html]
 max_line_length = 120
 
-[*.yml]
+[*.yml, package.json]
 indent_size = 2
 
 [Makefile]
