--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "karma-sauce-launcher": "^0.2.14",
     "minimist": "^1.1.3",
     "phantomjs": "^1.9.17",
-    "protractor": "^2.1.0"
+    "protractor": "^2.1.0",
+    "webpack": "^1.12.2",
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-hot-middleware": "^2.2.0"
   }
 }
